--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "7.2.11",
     "@angular/router": "7.2.11",
     "core-js": "2.4.1",
+    "fsevents": "^2.1.2",
     "rxjs": "6.4.0",
     "tslib": "1.9.0",
     "zone.js": "0.8.29"
@@ -35,6 +36,8 @@
     "@types/jasminewd2": "2.0.2",
     "@types/node": "6.0.60",
     "codelyzer": "4.0.1",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "2.0.0",
